cosmetics and more orcbot config options

--- a/src/proxy/orc.conf
+++ b/src/proxy/orc.conf
@@ -4,11 +4,11 @@
 ### IncomingConnectionDaemon ###
 
 # The host interface that the proxy will bind to. 
-# e.g icd_host = "localhost"
-icd_host =
+# e.g icd_host = localhost
+icd_host = 
 
 # The port that the proxy will listen for new connections.
-# e.g icd_port = "6667"
+# e.g icd_port = 6667
 icd_port = 
 
 ### BanHandler
@@ -19,24 +19,30 @@ bh_host =
 
 # The username and password of the mySQL user
 # e.g bh_user = shrek
-bh_user =
+bh_user = 
 # e.g bh_passwd = layers
-bh_passwd =
+bh_passwd = 
 
 # The database which contains the ban database.
-e.g = bandb
+# e.g = bandb
 bh_db = 
 
 ### ORCBot ###
+# The server and port ORCBot will connect too
+# e.g
+# orcbot_server = localhost
+# orcbot_port = 6667
+orcbot_server = 
+orcbot_port =
 
 # The location of the GNUGPG keyring file.
 # e.g orcbot_keyring = ~/.gnupgp
 orcbot_keyring =
 
-# The URI of the Pseudonym Manager server
-# e.g orcbot_pmname = "http://pm.onion/"
-orcbot_pmname =
-
 # The key id used by GNUGPG
 # e.g orcbot_keyid = "1EFNU"
 orcbot_keyid = 
+
+# The URI of the Pseudonym Manager server
+# e.g orcbot_pmname = "http://pm.onion/"
+orcbot_pmname =
