made conf.file more user friendly, removed debug.

--- a/src/proxy/orc.conf
+++ b/src/proxy/orc.conf
@@ -1,4 +1,7 @@
 ### Configuration file for Onion Relay Chat - ORC ###
+
+# All configuration options should not include
+# any form of quotion signs ("", '')
 [ORC]
 
 ### IncomingConnectionDaemon ###
@@ -36,13 +39,14 @@ orcbot_server =
 orcbot_port =
 
 # The location of the GNUGPG keyring file.
+# Don't add a trailing slash
 # e.g orcbot_keyring = ~/.gnupgp
 orcbot_keyring =
 
 # The key id used by GNUGPG
-# e.g orcbot_keyid = "1EFNU"
+# e.g orcbot_keyid = EN1EFNU
 orcbot_keyid = 
 
 # The URI of the Pseudonym Manager server
-# e.g orcbot_pmname = "http://pm.onion/"
+# e.g orcbot_pmname = 'http://pm.onion/'
 orcbot_pmname =
