--- a/src/proxy/orc.conf
+++ b/src/proxy/orc.conf
@@ -40,7 +40,7 @@ orcbot_port =
 
 # The location of the GNUGPG keyring file.
 # Don't add a trailing slash
-# e.g orcbot_keyring = ~/.gnupgp
+# e.g orcbot_keyring = ~/.gnupg
 orcbot_keyring =
 
 # The key id used by GNUGPG
