--- a/src/proxy/orc.conf
+++ b/src/proxy/orc.conf
@@ -18,11 +18,11 @@ icd_port =
 
 # The hostname of the running mySQL server
 # e.g bh_host = localhost 
-bh_host = 
+bh_host =  
 
 # The username and password of the mySQL user
 # e.g bh_user = shrek
-bh_user = 
+bh_user = site_visitor 
 # e.g bh_passwd = layers
 bh_passwd = 
 
@@ -35,13 +35,13 @@ bh_db =
 # e.g
 # orcbot_server = localhost
 # orcbot_port = 6667
-orcbot_server = 
-orcbot_port =
+orcbot_server = 192.168.1.2
+orcbot_port = 
 
 # The location of the GNUGPG keyring file.
 # Don't add a trailing slash
 # e.g orcbot_keyring = ~/.gnupg
-orcbot_keyring =
+orcbot_keyring = 
 
 # The key id used by GNUGPG
 # e.g orcbot_keyid = EN1EFNU
@@ -49,4 +49,8 @@ orcbot_keyid =
 
 # The URI of the Pseudonym Manager server
 # e.g orcbot_pmname = 'http://pm.onion/'
-orcbot_pmname =
+orcbot_pmname = 
+
+# The duration in minutes a pseudonym should be valid
+# e.g pseudonym_dur = 30
+pseudonym_dur =
